--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "start": "nodemon src/index.js",
     "db:create": "npx sequelize-cli db:create",
     "db:migrate": "npx sequelize-cli db:migrate",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha src/runTest --timeout 150000 --S"
   },
   "author": "fb",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "consolidate": "^0.16.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
@@ -28,6 +29,12 @@
     "pg-hstore": "^2.3.4",
     "pug": "^3.0.2",
     "sequelize": "^6.6.5",
+    "supertest": "^6.1.6",
     "swig": "^1.4.2"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.0.3"
   }
 }
